# granicus-case-study

./: .gitignore  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
docker/: Dockerfile.chatbot  Dockerfile.docparser  Dockerfile.embedder
llm_evals/: questions.json
problem_docs/: customer_segments.csv  faq_content.txt  feature_comparison.csv  granicus_products.html  granicus_products.md  pricing_matrix.csv  release_notes.txt  technical_specs.txt
src/apis/chatbot/: pyproject.toml
src/apis/chatbot/src/chatbot/: .env.example  app.py  serialisation.py  settings.py
src/apis/chatbot/src/chatbot/clients/: embedding_client.py  llm_client.py  reranker_client.py  weaviate_client.py
src/apis/chatbot/src/chatbot/pipeline/: prompt_builder.py  response_parser.py  retriever.py
src/apis/chatbot/src/chatbot/routes/: v1.py
src/apis/docparser/: pyproject.toml
src/apis/docparser/src/docparser/: app.py  helpers.py  serialisation.py  settings.py
src/apis/docparser/src/docparser/clients/: embedding_client.py  llm_client.py  weaviate_client.py
src/apis/docparser/src/docparser/routes/: v0.py  v1.py
src/apis/docparser/src/tests/: load_test.py  test.py
src/apis/embedder/: pyproject.toml
src/apis/embedder/src/embedder/: app.py  handlers.py  serialisation.py  settings.py
src/apis/embedder/src/embedder/routes/: v1.py
src/commons/: pyproject.toml
src/commons/src/commons/: metrics.py  middleware.py
tests/: conftest.py  test_docparser.py  test_response_parser.py  test_retriever.py
