[project]
name = "granicus-case-study"
version = "0.1.0"
description = "A case study for a data scientist position at Granicus"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest-cov>=7.0.0",
]

[tool.uv.workspace]
members = [
    "src/apis/docparser",
    "src/apis/embedder",
    "src/apis/chatbot",
    "src/commons",
]

[dependency-groups]
dev = [
    "deepeval>=3.7.9",
    "locust>=2.43.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
