[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "weaviate-client>=4.19.2",
]
